--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user: one
-  order_date: 2023-09-28
-  status: MyString
+# one:
+#   user: one
+#   order_date: 2023-09-28
+#   status: MyString
 
-two:
-  user: two
-  order_date: 2023-09-28
-  status: MyString
+# two:
+#   user: two
+#   order_date: 2023-09-28
+#   status: MyString
