--- a/test/fixtures/promotions.yml
+++ b/test/fixtures/promotions.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  code: MyString
-  discount_percentage: 9.99
-  valid_from: 2023-09-28
-  valid_until: 2023-09-28
+# one:
+#   code: MyString
+#   discount_percentage: 9.99
+#   valid_from: 2023-09-28
+#   valid_until: 2023-09-28
 
-two:
-  code: MyString
-  discount_percentage: 9.99
-  valid_from: 2023-09-28
-  valid_until: 2023-09-28
+# two:
+#   code: MyString
+#   discount_percentage: 9.99
+#   valid_from: 2023-09-28
+#   valid_until: 2023-09-28
