--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user: one
-  product: one
-  rating: 1
-  comment: MyText
-  created_at: 2023-09-28 11:51:11
+# one:
+#   user: one
+#   product: one
+#   rating: 1
+#   comment: MyText
+#   created_at: 2023-09-28 11:51:11
 
-two:
-  user: two
-  product: two
-  rating: 1
-  comment: MyText
-  created_at: 2023-09-28 11:51:11
+# two:
+#   user: two
+#   product: two
+#   rating: 1
+#   comment: MyText
+#   created_at: 2023-09-28 11:51:11
