--- a/test/fixtures/shipments.yml
+++ b/test/fixtures/shipments.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  order: one
-  tracking_number: MyString
-  delivery_date: 2023-09-28
-  status: MyString
+# one:
+#   order: one
+#   tracking_number: MyString
+#   delivery_date: 2023-09-28
+#   status: MyString
 
-two:
-  order: two
-  tracking_number: MyString
-  delivery_date: 2023-09-28
-  status: MyString
+# two:
+#   order: two
+#   tracking_number: MyString
+#   delivery_date: 2023-09-28
+#   status: MyString
