--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  email: MyString
-  password_digest: MyString
-  first_name: MyString
-  last_name: MyString
-  address: one
-  role: MyString
+# one:
+#   email: MyString
+#   password_digest: MyString
+#   first_name: MyString
+#   last_name: MyString
+#   address: one
+#   role: MyString
 
-two:
-  email: MyString
-  password_digest: MyString
-  first_name: MyString
-  last_name: MyString
-  address: two
-  role: MyString
+# two:
+#   email: MyString
+#   password_digest: MyString
+#   first_name: MyString
+#   last_name: MyString
+#   address: two
+#   role: MyString
