Integrate cart into the app

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -12,13 +12,14 @@ two:
   image_url: MyString
   price: 9.99
 
+
 ruby:
-  name: Project management course
+  name: Programming Ruby 1.9
   description:
-  oversight activities that insure the delivery of a high-quality system
-   on time and within budget including planning, budgeting, hiring and organizing
-    developers into teams.
-.
+  Ruby is the fastest growing and most exciting dynamic
+  language out there. If you need to get working programs
+  delivered fast, you should add Ruby to your toolbox.
   price: 49.50
-  image_url: project_management_book.jpg
+  image_url: ruby.jpg
+
 
