--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#   user: one
-#   order_date: 2023-09-28
-#   status: MyString
+one:
+  name: MyString
+  address: MyText
+  email: MyString
+  pay_type: 1
 
-# two:
-#   user: two
-#   order_date: 2023-09-28
-#   status: MyString
+two:
+  name: MyString
+  address: MyText
+  email: MyString
+  pay_type: 1
